Custom cartesian and attitude controller

--- a/uav/CMakeLists.txt
+++ b/uav/CMakeLists.txt
@@ -11,6 +11,7 @@ include($ENV{FLAIR_ROOT}/flair-src/cmake-modules/GlobalCmakeFlair.cmake)
 SET(SRC_FILES
 	src/main.cpp
 	src/customCtrl.cpp
+    src/myCtrl.cpp
 )
 
 FLAIR_DEMO(${PROJECT_NAME} "${SRC_FILES}"
